# learn_Dobby

./: .gitignore  README.md  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mik/dobbydemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mik/dobbydemo/: App.java  FileHelper.java  MainActivity.java
app/src/main/java/com/mik/dobbydemo/IO/: BuildCompat.java  DexOverride.java  NativeEngine.java  Reflect.java  ReflectException.java  SystemPropertiesCompat.java
app/src/main/java/com/mik/dobbydemo/IO/passRoot/: RootDetectUtil.java
app/src/main/java/com/mik/dobbydemo/utils/: AppUtils.java  CLogUtils.java  Encrypt.java  FileUtils.java  HookServer.java  PermissionUtils.java  RootUtils.java  SignUtils.java  ThreadUtils.java  ToastUtils.java
app/src/main/jni/: main.cpp  main.h
app/src/main/jni/Foundation/: CMakeLists.txt  Helper.cpp  Helper.h  IORelocator.cpp  IORelocator.h  Log.h  SandboxFs.cpp  SandboxFs.h  VMHook.cpp  VMHook.h  main.cpp  main.h
app/src/main/jni/Foundation/syscall/: BinarySyscallFinder.cpp
app/src/main/jni/dlfc/: dlfcn_nougat.cpp
app/src/main/jni/encrypt/: AESUtils.cpp  AESUtils.h  Base64Utils.cpp  Base64Utils.h  Md5Utils.cpp  Md5Utils.h
app/src/main/jni/testB/: test.cpp  test.h
app/src/main/jni/utils/: FileUtils.cpp  HookUtils.cpp  Log.h  logging.h
app/src/main/jni/xhook/: xh_jni.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mik/dobbydemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
